Добавлена фабрика, вместо w3c.dom реализован jaxb, добавлен lombok, класс для проверки расширения файлов.